exports[`prefer-block-statement-over-iife > invalid(1): (() => {\n\tconst value = getValue();\n\trun(value);\n})(); 1`] = `

  1 | (() => {
  2 | 	const value = getValue();
  3 | 	run(value);
  4 | })();

`;

exports[`prefer-block-statement-over-iife > invalid(1): (() => {\n\tconst value = getValue();\n\trun(value);\n})(); 2`] = `

Message:
> 1 | (() => {
    | ^^^^^^^^
> 2 | 	const value = getValue();
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | 	run(value);
    | ^^^^^^^^^^^^
> 4 | })();
    | ^^^^ Prefer a block statement over an IIFE used only for scoping.

Output:
  1 | {
  2 | 	const value = getValue();
  3 | 	run(value);
  4 | }

`;

exports[`prefer-block-statement-over-iife > invalid(2): (function () {\n\tconst value = getValue();\n\trun(value);\n})(); 1`] = `

  1 | (function () {
  2 | 	const value = getValue();
  3 | 	run(value);
  4 | })();

`;

exports[`prefer-block-statement-over-iife > invalid(2): (function () {\n\tconst value = getValue();\n\trun(value);\n})(); 2`] = `

Message:
> 1 | (function () {
    | ^^^^^^^^^^^^^^
> 2 | 	const value = getValue();
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | 	run(value);
    | ^^^^^^^^^^^^
> 4 | })();
    | ^^^^ Prefer a block statement over an IIFE used only for scoping.

Output:
  1 | {
  2 | 	const value = getValue();
  3 | 	run(value);
  4 | }

`;

exports[`prefer-block-statement-over-iife > invalid(3): if (condition) {\n\t(() => {\n\t\tconst value = getValue();\n\t\trun(value);\n\t})();\n} 1`] = `

  1 | if (condition) {
  2 | 	(() => {
  3 | 		const value = getValue();
  4 | 		run(value);
  5 | 	})();
  6 | }

`;

exports[`prefer-block-statement-over-iife > invalid(3): if (condition) {\n\t(() => {\n\t\tconst value = getValue();\n\t\trun(value);\n\t})();\n} 2`] = `

Message:
  1 | if (condition) {
> 2 | 	(() => {
    | 	^^^^^^^^
> 3 | 		const value = getValue();
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 4 | 		run(value);
    | ^^^^^^^^^^^^^
> 5 | 	})();
    | ^^^^^ Prefer a block statement over an IIFE used only for scoping.
  6 | }

Output:
  1 | if (condition) {
  2 | 	{
  3 | 		const value = getValue();
  4 | 		run(value);
  5 | 	}
  6 | }

`;

exports[`prefer-block-statement-over-iife > invalid(4): (() => {\n\t// Keep this comment.\n\trun();\n})(); 1`] = `

  1 | (() => {
  2 | 	// Keep this comment.
  3 | 	run();
  4 | })();

`;

exports[`prefer-block-statement-over-iife > invalid(4): (() => {\n\t// Keep this comment.\n\trun();\n})(); 2`] = `

Message:
> 1 | (() => {
    | ^^^^^^^^
> 2 | 	// Keep this comment.
    | ^^^^^^^^^^^^^^^^^^^^^^
> 3 | 	run();
    | ^^^^^^^
> 4 | })();
    | ^^^^ Prefer a block statement over an IIFE used only for scoping.

Output:
  1 | {
  2 | 	// Keep this comment.
  3 | 	run();
  4 | }

`;

exports[`prefer-block-statement-over-iife > invalid(5): (() => {\n\tthis.run();\n})(); 1`] = `

  1 | (() => {
  2 | 	this.run();
  3 | })();

`;

exports[`prefer-block-statement-over-iife > invalid(5): (() => {\n\tthis.run();\n})(); 2`] = `

Message:
> 1 | (() => {
    | ^^^^^^^^
> 2 | 	this.run();
    | ^^^^^^^^^^^^
> 3 | })();
    | ^^^^ Prefer a block statement over an IIFE used only for scoping.

Output:
  1 | {
  2 | 	this.run();
  3 | }

`;

exports[`prefer-block-statement-over-iife > invalid(6): (() => {\n\tfunction nested() {\n\t\treturn value;\n\t}\n\n\trun(nested);\n})(); 1`] = `

  1 | (() => {
  2 | 	function nested() {
  3 | 		return value;
  4 | 	}
  5 |
  6 | 	run(nested);
  7 | })();

`;

exports[`prefer-block-statement-over-iife > invalid(6): (() => {\n\tfunction nested() {\n\t\treturn value;\n\t}\n\n\trun(nested);\n})(); 2`] = `

Message:
> 1 | (() => {
    | ^^^^^^^^
> 2 | 	function nested() {
    | ^^^^^^^^^^^^^^^^^^^^
> 3 | 		return value;
    | ^^^^^^^^^^^^^^^
> 4 | 	}
    | ^^
> 5 |
    | ^
> 6 | 	run(nested);
    | ^^^^^^^^^^^^^
> 7 | })();
    | ^^^^ Prefer a block statement over an IIFE used only for scoping.

Output:
  1 | {
  2 | 	function nested() {
  3 | 		return value;
  4 | 	}
  5 |
  6 | 	run(nested);
  7 | }

`;

exports[`prefer-block-statement-over-iife > invalid(7): (() => {\n\tfunction nested() {\n\t\tthis.run();\n\t}\n\n\trun(nested);\n})(); 1`] = `

  1 | (() => {
  2 | 	function nested() {
  3 | 		this.run();
  4 | 	}
  5 |
  6 | 	run(nested);
  7 | })();

`;

exports[`prefer-block-statement-over-iife > invalid(7): (() => {\n\tfunction nested() {\n\t\tthis.run();\n\t}\n\n\trun(nested);\n})(); 2`] = `

Message:
> 1 | (() => {
    | ^^^^^^^^
> 2 | 	function nested() {
    | ^^^^^^^^^^^^^^^^^^^^
> 3 | 		this.run();
    | ^^^^^^^^^^^^^
> 4 | 	}
    | ^^
> 5 |
    | ^
> 6 | 	run(nested);
    | ^^^^^^^^^^^^^
> 7 | })();
    | ^^^^ Prefer a block statement over an IIFE used only for scoping.

Output:
  1 | {
  2 | 	function nested() {
  3 | 		this.run();
  4 | 	}
  5 |
  6 | 	run(nested);
  7 | }

`;

exports[`prefer-block-statement-over-iife > invalid(8): (() => {\n\tconst value = getValue() satisfies number;\n\trun(value);\n})(); 1`] = `

  1 | (() => {
  2 | 	const value = getValue() satisfies number;
  3 | 	run(value);
  4 | })();

`;

exports[`prefer-block-statement-over-iife > invalid(8): (() => {\n\tconst value = getValue() satisfies number;\n\trun(value);\n})(); 2`] = `

Message:
> 1 | (() => {
    | ^^^^^^^^
> 2 | 	const value = getValue() satisfies number;
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | 	run(value);
    | ^^^^^^^^^^^^
> 4 | })();
    | ^^^^ Prefer a block statement over an IIFE used only for scoping.

Output:
  1 | {
  2 | 	const value = getValue() satisfies number;
  3 | 	run(value);
  4 | }

`;

exports[`prefer-block-statement-over-iife > invalid(9): (() => {\n\tfunction foo() {}\n\tfoo();\n})(); 1`] = `

  1 | (() => {
  2 | 	function foo() {}
  3 | 	foo();
  4 | })();

`;

exports[`prefer-block-statement-over-iife > invalid(9): (() => {\n\tfunction foo() {}\n\tfoo();\n})(); 2`] = `

Message:
> 1 | (() => {
    | ^^^^^^^^
> 2 | 	function foo() {}
    | ^^^^^^^^^^^^^^^^^^
> 3 | 	foo();
    | ^^^^^^^
> 4 | })();
    | ^^^^ Prefer a block statement over an IIFE used only for scoping.

Output:
  1 | {
  2 | 	function foo() {}
  3 | 	foo();
  4 | }

`;
